k8s/local/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-elasticache
  namespace: gene-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-elasticache
  template:
    metadata:
      labels:
        app: redis-elasticache
    spec:
      containers:
        - name: redis
          image: redis:7.4
          command: ["redis-server", "--save", "", "--appendonly", "no"]
          ports:
            - containerPort: 6379
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: redis-elasticache
  namespace: gene-web
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis-elasticache
